# M2-S1

./: .gitignore
CAO/: SALOME-7.7.1-WIN64 - Raccourci.lnk  Thumbs.db  demo - Raccourci.lnk  run_salome - Raccourci.lnk  save.txt
CAO/Projet/: Rapport.docx  Thumbs.db  blabla.txt
HPC/Lab1-Sources/: display_omp.c  display_omp.c~  scalar_product
HPC/Lab2-Source/: Makefile~  clef.txt  clef.txt.pub  display_mpi  display_mpi.c  fft  list.txt  list.txt~  scalar_product
HPC/projet/: Rapport_comp.doc  info_mpi.txt  ssh.txt  ~$pport_comp.doc
Image_avancee/: CR.odt
Image_avancee/TP1/: Lefevre-Seguret-Tp01.gra  grid-displace.gra  tp1.gra
Image_avancee/TP2/: Lefevre-Seguret-TP2.gra  readme.odt
Image_avancee/TP3/: Tp3.gra
Image_avancee/TP4/: Tp4.gra  back_up_Tp4.gra  tp4_Christopher.gra
Image_avancee/TP5/: Tp5.gra  back_up_Tp5.gra  shader.c  tp5_chris.gra
Image_avancee/TP6/: Compte_Rendu.docx  Nameless.txt  Ray_Tracing_Dummy.gra  Tp6.gra  Tp6_Erreur.gra  Tp6_back_up.gra
Imagerie medicale/TP_FBtomo/: litfbsinogramme.m  main.m
Imagerie medicale/TPtomo/: CR.docx  FBPpar.m  litsinogramme.m  testlitsino.m
Imagerie medicale/TPtomo-Henry/: filtered.m  litsinogramme.m  testlitsino.m
Imagerie_medicale/: sinoTransform.ml
Imagerie_medicale/TP_FBtomo/: CR.docx  fbshepploganfilter.m  main.m  readme.txt  ~$CR.docx
Imagerie_medicale/TP_ROI/: Cpt.docx  Thumbs.db  dataFB192_PIx125_SL  main.asv  main.m  main_part1.m  main_part2.m
Imagerie_medicale/TPtomo/: FBPpar.m  litsinogramme.m
Modelisation Scientifique/: main.m
Modelisation Scientifique/Data/: synop.2015101912.csv
Modelisation surfaces/TP1/: CR.docx
Modelisation surfaciques (stephanie)/TP1 (copie)/: ATT00003
Modelisation_Scientifique/: cities.kml  colorData.kml  colormapShepard.kml  distance.m  importFile.m  main.m  main.m~  output_Kelvin.kml  test
Modelisation_Scientifique/Data/: .~lock.synop.2015102612.csv#  postesSynop_modif.csv  synop.2015102612.csv
Modelisation_Scientifique/Visu_Scientifique/: Visu_Scientifique.pro  colormap.cpp  colormap.h  main.cpp
Modelisation_surfacique_ulysse/TP1/: CMakeLists.txt  CR.docx  CompteRendu.odt  ~$CR.docx
Modelisation_surfacique_ulysse/TP2/: CR-pdf.docx  CR.docx  Cpt.odt  Thumbs.db  ~$Cpt.odt
Outils info/29-09-15/: .~lock.Compte_Rendu.odt#  Compte_Rendu.odt  Compte_Rendu.odt.saved  test.R
Outils_info/: Outils info cheat.docx  Presentation_Finale-Outils_infos.pptx  Thumbs.db  note
Outils_info/29-09-15/: Compte_Rendu.odt.bak~  Cpt.docx
Outils_info/Tp2/: 3.3-alpha1.tar.bz2  CMakeLists.txt
Outils_info/Tp2.build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
Outils_info/Tp2/src/: main.cpp
Outils_info/Tp2/src/tests/: matrice.cpp  test1.cpp
Outils_info/Tp3/: geoReader  geoReader.cpp  script.sh  square.geo  square2.msh  squareRes.geo  squareRes.msh  square_sav.geo
Outils_info/Tp4/: CompteRendu.docx  CompteRendu.odt  cr.txt
Outils_info/Tp4/src/: CMakeLists.txt  CMakeLists2.txt  exemple1.py  exemple2.py  main.i  main_wrap.c  main_wrap.cxx  test2.c
Projet/: Cahier des charges.docx  English abtract.docx  Presentation.pptx  Rapport final.docx  Thumbs.db  projet_tutore_M2.gan  vrai_projet_tutore_M2.gan  ~$Presentation.pptx  ~$hier des charges.docx  ~$pport final.docx
Projet/Decembre/: Cahier des charges.docx  PresentationMoche.pptx  Thumbs.db
Projet/Photos/: Thumbs.db
Projet/Pour rapport/: ProcessusEtau.txt  ProcessusVshappe.txt  Thumbs.db
Reconstruction_surface/: Rapport_Projet.docx  ~$pport_Projet.docx
Reconstruction_surface/Tp1/: default-scene.blend
Reconstruction_surface/Tp2/: crust.sce  leastSquaresCurve.sce  leastSquaresSurface.sce  qdelaunay.sce
Reconstruction_surface/Tp3/: Makefile  imageMLS  mlsRec.cpp
Reconstruction_surface/cga-tp03/: Makefile  imageMLS  main.cpp  mlsRec.cpp  mlsRec.h
Reconstruction_surface/miniproj/: .qglviewer.xml  Makefile  data_struct_algo.cpp  iso_value.cpp  main.pro  pointsToSurface  pointsToSurface.cpp  pointsToSurface.h  viewer.cpp  viewer.h
Visualisation/: Cpt_Elise_Arnaud.docx  Cpt_Isabelle_Sivignon.docx  Thumbs.db  ~$t_Elise_Arnaud.docx
Visualisation/QT/: QT.pro  QT.pro.user.07a3ebf  QT.pro.user.428ddd3  QT.pro.user.9ad77c2  bordsobjets.cpp  bordsobjets.h  composantesconnexes.cpp  composantesconnexes.h  convolution.cpp  convolution.h  diagramcolorwindow.cpp  dilaero.cpp  dilaero.h  etalement.cpp  grisconvers.h  (+19 more)
(+290 files in other folders)
